# CarPartsScraping

./: .env  .gitignore  README.md  main.py  postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 11a88e82035f_add_validation_metrics_and_feature_.py  11c4824d2991_added_platform_car_model_relation.py  b5d6ae97b2d4_added_possible_names_to_part_categories.py  cbf75eeeaa87_initial_migration.py
app/: main.py
app/dependencies/: car_brand.py  car_model.py  car_model_platform.py  database.py  part.py  part_category.py  part_manufacturer.py  platform.py  regression_model.py  scraped_part_data.py
app/routers/: car_brand.py  car_model.py  car_model_platform.py  part.py  part_category.py  part_manufacturer.py  platform.py  regression_model.py  scraped_part_data.py  scraping.py
app/schemas/: car_brand.py  car_model.py  car_model_platform.py  part.py  part_category.py  part_manufacturer.py  platform.py  regression_model.py  scraped_part_data.py  scraping.py
celery_apps/: base.py
celery_apps/cpu_worker/: main.py
celery_apps/cpu_worker/process_data/: tasks.py
celery_apps/cpu_worker/training/: tasks.py
celery_apps/io_worker/: main.py
common/: settings.py
common/database/: connection.py
common/database/cruds/: base.py  (+9 more)
common/utils/: files.py
docs/: database_models.md  development_rules.md  project_structure.md
scripts/: scrape_exist_parts.py  scrape_ria_parts.py  seed_initial_data.py  test_crud.py  trigger_celery_task.py
scripts/data/: scraped_exist_data.json  scraped_ria_data.json
scripts/html_examples/: exist_search_listing.html
(+36 files in other folders)
